<resources>
    <string name="app_name">GetNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="getnews">GetNews</string>
    <string name="for_you">FOR YOU</string>
    <string name="latest_news">LATEST NEWS</string>
    <string name="connection_issue_message">It seems that you have a connection issue.\nPlease, check your connection and retry again</string>
    <string name="connection_error">CONNECTION ERROR</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="save_your_news">SAVE YOUR NEWS</string>
    <string name="bookmarks_message">Save your favorite news and articles to read\nthem later.</string>
    <string name="search">Search</string>
    <string name="not_found">HUMM.. NOT FOUND</string>
    <string name="search_desc">We could not find results for your search.\nTry using another keywords.</string>
    <string name="search_hint">Search for news and articles...</string>
    <string name="no_news_currently_available">No news currently available</string>
</resources>