<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_forYou"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/extendedToolbar_color"
        android:fontFamily="@font/roboto_bold"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="8dp"
        android:text="@string/for_you"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_forYou"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/extendedToolbar_color"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forYou" />

    <TextView
        android:id="@+id/tv_latestNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/latest_news"
        android:textColor="@color/textColor"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_forYou" />

    <ImageView
        android:id="@+id/iv_forYou_notFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_inbox"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/vp_forYou"
        app:layout_constraintEnd_toEndOf="@id/vp_forYou"
        app:layout_constraintStart_toStartOf="@id/vp_forYou"
        app:layout_constraintTop_toTopOf="@id/vp_forYou"
        app:layout_constraintVertical_bias="0.32999998"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_forYou_notFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/no_news_currently_available"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/iv_forYou_notFound"
        app:layout_constraintStart_toStartOf="@id/iv_forYou_notFound"
        app:layout_constraintTop_toBottomOf="@id/iv_forYou_notFound" />
</androidx.constraintlayout.widget.ConstraintLayout>
