<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.omarahmed.getnews.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDECEC"
        app:layoutDescription="@xml/fragment_home_xml_constraintlayout_scene">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/courgette"
                android:text="@string/getnews"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_viewPager"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#EDECEC"
            readApiResponse="@{homeViewModel.latestNewsResponse}"
            readDatabase="@{homeViewModel.readLatestNews}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_home"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_forYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/for_you"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_forYou"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forYou" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            readApiResponse="@{homeViewModel.latestNewsResponse}"
            readDatabase="@{homeViewModel.readLatestNews}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_viewPager">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_latestNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                tools:itemCount="3"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/latest_news_row"
                tools:spanCount="2" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ImageView
            android:id="@+id/iv_error"
            readApiResponse="@{homeViewModel.latestNewsResponse}"
            readDatabase="@{homeViewModel.readLatestNews}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic__connection_error"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/connection_error"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@id/iv_error"
            app:layout_constraintStart_toStartOf="@id/iv_error"
            app:layout_constraintTop_toBottomOf="@id/iv_error"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_error"
            readApiResponse="@{homeViewModel.latestNewsResponse}"
            readDatabase="@{homeViewModel.readLatestNews}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:text="@string/connection_issue_message"
            tools:visibility="visible" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
